# uv-matrix

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/changelog/: SKILL.md
.github/workflows/: build-release.yml  test.yml
docs/: changelog.md  configuration.md  usage.md
examples/github-actions/: README.md  main.py  pyproject.toml  test_main.py
examples/github-actions/.github/workflows/: test.yml
examples/matrix-test/: main.py  pyproject.toml
examples/python-impls/: default.profraw  main.py  pyproject.toml
examples/run-tools/: pyproject.toml
src/uv_matrix/: cli.py  config.py
tests/: test_uv_matrix.py
